src/test/deca/context/invalid/Obj/redecl-field-methode.deca
// Description:
//    Redéfinition d'un champ à l'intérieur d'une méthode
//
// Résultat:
//Une autre variable déjà déclarée a le même nom
//
class A {
    int a;
    void methode(){
    float a;
    }
}
{}